// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating interchange element has duplicate names should have validation failures: when validating interchange element has duplicate names should have no validation failures -> message 1`] = `"Interchange InterchangeName redeclares element DomainEntityElementName."`;

exports[`when validating interchange element has duplicate names should have validation failures: when validating interchange element has duplicate names should have no validation failures -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 3,
  "tokenText": "domain entity",
}
`;

exports[`when validating interchange element has multiple duplicate names should have validation failures: when validating interchange element has multiple duplicate names should have validation failures -> message 1`] = `"Interchange InterchangeName redeclares element DomainEntityElementName1."`;

exports[`when validating interchange element has multiple duplicate names should have validation failures: when validating interchange element has multiple duplicate names should have validation failures -> message 2`] = `"Interchange InterchangeName redeclares element DomainEntityElementName2."`;

exports[`when validating interchange element has multiple duplicate names should have validation failures: when validating interchange element has multiple duplicate names should have validation failures -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 3,
  "tokenText": "domain entity",
}
`;

exports[`when validating interchange element has multiple duplicate names should have validation failures: when validating interchange element has multiple duplicate names should have validation failures -> sourceMap 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;
